2009-11-10  Jan Djärv  <jan.h.d@swipnet.se>

	* keyboard.h: Declare timer_check.

	* keyboard.c (timer_check_2): New function that does what the old
	timer_check did.
	(timer_check): Call timer_check_2 until -1 or a non-zero time is
	returned, i.e. don't return -1 with timers pending.

	* process.c: Remove extern declaration of timer_check.

	* xmenu.c (x_menu_wait_for_event): Remove code that did a timeout
	even if timer_check returned -1.

	* gtkutil.c (xg_dialog_response_cb): data is now a struct xg_dialog_data
	(pop_down_dialog): Destroy widget (if any), cancel timer and unref
	the event loop.
	(xg_maybe_add_timer, xg_dialog_run): New functions (bug #4574).
	(xg_get_file_name, xg_get_font_name): Call xg_dialog_run (bug #4574).
	Destroy the dialog after xg_dialog_run.

2009-11-10  Stefan Monnier  <monnier@iro.umontreal.ca>

	* menu.c (Fx_popup_menu) [HAVE_NS]: Remove unused vars.

2009-11-10  Jan Djärv  <jan.h.d@swipnet.se>

	* xmenu.c (xmenu_show): Must not be static after 2009-11-09 changes.

2009-11-09  Juanma Barranquero  <lekktu@gmail.com>

	* menu.c [HAVE_NTGUI]: Declare current_popup_menu.

2009-11-09  Stefan Monnier  <monnier@iro.umontreal.ca>

	* menu.c (Fx_popup_menu): Consolidate versions from xmenu.c,
	w32menu.c, and nsmenu.m.
	Simplify the obsolete case where position is nil.
	(cleanup_popup_menu): New function, moved from nsmenu.m.
	(struct skp): Remove slot `notreal'.
	(single_keymap_panes, keymap_panes): Remove arg `notreal' and
	adjust callers.
	(single_menu_item): Adjust call to parse_menu_item.
	(syms_of_menu): Defsubr x-popup-menu.
	* menu.h (Vmenu_updating_frame): Consolidate declarations from *menu.c.
	(keymap_panes): Don't export any more.
	(mouse_position_for_popup, w32_menu_show, ns_menu_show)
	(xmenu_show): Declare.
	* keyboard.c (parse_menu_item): Remove arg `notreal'.
	(menu_bar_item, read_char_minibuf_menu_prompt): Adjust callers.
	* keyboard.h (parse_menu_item): Update declaration.
	* xmenu.c (Fx_popup_menu): Remove.